--- a/index.html
+++ b/index.html
@@ -236,10 +236,12 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src="js/load.js"></script>
   <script src="js/data.js"></script>
   <script src="js/gallery.js"></script>
-  <script src="js/filters.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/filters.js"></script>
+
 
 </body>
 </html>
