Добавляет обработчик закрытия big-picture

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег">
+                  <input class="text__hashtags" name="hashtags" placeholder="#хэш-тег" minlength="2">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
                 </fieldset>
 
@@ -237,14 +237,11 @@
   </template>
 
   <script src="js/load.js"></script>
+  <script src="js/util.js"></script>
   <script src="js/data.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/form.js"></script>
   <script src="js/filters.js"></script>
-<<<<<<< HEAD
-
-=======
->>>>>>> master
 
 </body>
 </html>
