--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
   <script src="js/gallery.js"></script>
   <script src="js/form.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/render.js"></script>
+
 
 </body>
 </html>
