--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
   <script src="js/gallery.js"></script>
   <script src="js/form.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/effects.js"></script>
 
 </body>
 </html>
