--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
   <script src="js/form.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/uploadFile.js"></script>
 
 </body>
 </html>
